--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
 </head>
 
 <body>
-  	<app-root>Loading...</app-root>
+  	<app-root>
+      <div class="container text-center">
+        <img src="/assets/corgi.gif" alt="running corgi">
+    </app-root>
   	<router-output></router-output>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
